--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,164 @@
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --color-primary-300: #dfc571;
+  --color-primary-500: #bb9c38;
+  --color-primary-700: #897b2c;
+  --color-secondary-500: #1c1c9a;
+  --color-secondary-700: #070750;
+  --color-neutral-1000: #000000;
+  --color-neutral-900: #0a0a0a;
+  --color-neutral-800: #292929;
+  --color-neutral-700: #3d3d3d;
+  --color-neutral-600: #525252;
+  --color-neutral-500: #adadad;
+  --color-neutral-400: #c2c2c2;
+  --color-neutral-300: #d6d6d6;
+  --color-neutral-200: #ebebeb;
+  --color-neutral-100: #f5f5f5;
+  --color-neutral-0: #ffffff;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-ui-light-green: #8cd29c;
+  --color-ui-green: #57af6b;
+  --color-ui-red: #dc3545;
+  --color-ui-red-darker: #9f212e;
+  --color-ui-yellow: #ffc107;
+  --color-ui-blue-lighter: #aec1e2;
+  --color-ui-blue: #3e72d0;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  /* Contextual */
+  --color-text-primary: var(--color-neutral-1000);
+  --color-text-secondary: var(--color-neutral-700);
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
+  --color-success: var(--color-ui-green);
+  --color-error: var(--color-ui-red);
+  --color-warning: var(--color-ui-yellow);
+  --color-info: var(--color-ui-blue);
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --link-color: blue;
+  --link-color-hover: darkblue;
+
+  --primary-button-color: var(--color-primary-500);
+  --primary-button-color-hover: var(--color-primary-700);
+
+  --secondary-button-color: var(--color-secondary-500);
+  --secondary-button-color-hover: var(--color-secondary-700);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+html {
+  height: 100%;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+#root {
+  height: 100%;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+body {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "NotoSans", sans-serif;
+  background-color: var(--color-neutral-100);
+  color: var(--color-text-secondary);
+  height: 100%;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.4px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+p {
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
 a {
-  color: inherit;
+  color: var(--link-color);
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+a:hover {
+  color: var(--link-color-hover);
+}
+
+button {
+  font-family: "NotoSans", sans-serif;
+}
+
+@keyframes spinner {
+  0% {
+    animation-timing-function: cubic-bezier(0.5856, 0.0703, 0.4143, 0.9297);
+    transform: rotate(0);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.scroll-lock {
+  overflow: hidden;
+}
+
+.Dropdown-control {
+  color: var(--color-neutral-900) !important;
+  border: 1px solid var(--color-neutral-200) !important;
+  border-radius: 4px !important;
+  cursor: pointer !important;
+}
+
+.Dropdown-arrow {
+  top: 16px !important;
+}
+
+.cat-dropdown {
+  min-width: 190px;
+  flex: 1;
+  max-width: 250px;
+}
+
+.react-calendar {
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 0 16px var(--color-neutral-200);
+}
+
+abbr[title] {
+  text-decoration: none;
+}
+
+.react-calendar__navigation {
+  margin-bottom: 0;
+}
+
+.react-calendar__tile--now,
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+  background: #ebebeb;
+}
+
+.react-calendar__tile {
+  aspect-ratio: 1;
+}
+
+.react-calendar__tile--active,
+.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile--active:enabled:focus {
+  background: var(--color-primary-500);
+  color: var(--color-neutral-0);
+}
+
+.react-calendar__tile:disabled {
+  background-color: #fff;
+  opacity: 0.6;
 }
