add all time page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 :root {
+  --color-primary-200: #efe0af;
   --color-primary-300: #dfc571;
   --color-primary-500: #bb9c38;
   --color-primary-700: #897b2c;
